AdminUser  aktivasyon işlemleri yapıldı.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/UpdatePassword.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/UpdatePassword.cshtml
@@ -1,7 +1,9 @@
-﻿@model bool
+﻿@model ECommerce.WEB.Areas.Admin.Model.AdminUserManagement.AdminUserUpdatePasswordModel
 @{
+    ViewBag.Title = "UpdatePassword";
     Layout = null;
 }
+
 
 <!doctype html>
 <html class="no-js" lang="en">
@@ -9,7 +11,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Aktivasyon</title>
+    <title>Şifre Oluştur</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="~/Themes/AdminAssets/images/icon/favicon.ico">
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/bootstrap.min.css">
@@ -45,51 +47,27 @@
     <div class="login-area login-bg">
         <div class="container">
             <div class="login-box ptb--100">
-                @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { id = "LoginForm" }))
+                @using (Html.BeginForm("UpdatePassword", "AdminUser", FormMethod.Post, new { id = "UpdatePasswordAdminUser" }))
                 {
-                    <div class="login-form-head">
-                        <h4>Aktivasyonu tamamlayın</h4>
-                    </div>
+                <div class="login-form-head">
+                    <h4>Şifre Oluşturun</h4>
+                    <p>Aktivasyonun tammalanması için şifre oluşturunuz</p>
+                </div>
                     <div class="login-form-body">
                         <div class="form-gp">
-                            @if (Model)
-                            {
-                                <!-- section start -->
-                                <section class="p-0">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <div class="error-section">
-                                                    <h5>Aktivasyon Tamamlandı</h5>
-                                                    <a href="@Url.Action("UpdatePassword","AdminUser", new {Area="Admin" })" class="ti-arrow-right btn btn-rounded btn-warning mb-3 ">Şifre</a>
-                                         
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                                <!-- Section ends -->
-                            }
-                            else
-                            {
-                                <!-- section start -->
-                                <section class="p-0">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <div class="error-section">
-                                                    <h5>Aktivasyon Daha Önce Yapılmış</h5>
-                                                    <a href="@Url.Action("Login","Home", new { Area="Admin"  })" class="ti-arrow-right btn btn-rounded btn-warning mb-3 ">Anasayfa</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-                                <!-- Section ends -->
-                            }
+                            @Html.LabelFor(s => s.Password, new { @class = "col-form-label" })
+                            @Html.PasswordFor(s => s.Password, new {  })
+                            @Html.ValidationMessageFor(s => s.Password)
                         </div>
-                    
-      
+                        <div class="form-gp">
+                            @Html.LabelFor(s => s.RePassword, new { @class = "col-form-label" })
+                            @Html.PasswordFor(s => s.RePassword, new { @class = "form-control"})
+                            @Html.ValidationMessageFor(s => s.RePassword)
+                        </div>
+                        
+                        <div class="submit-btn-area">
+                            <button id="form_submit" type="submit">Şifreyi Kaydet<i class="ti-arrow-right"></i></button>
+                        </div>
                     </div>
                 }
             </div>
@@ -115,10 +93,8 @@
     <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
     <script>
-        Jform('#LoginForm');
+        Jform('#UpdatePasswordAdminUser');
     </script>
 </body>
 
 </html>
-
-
