--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Home/Login.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Home/Login.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Login - srtdash</title>
+    <title>Login </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="~/Themes/AdminAssets/images/icon/favicon.ico">
     <link rel="stylesheet" href="~/Themes/AdminAssets/css/bootstrap.min.css">
