Kupon ekleme ve silme yapıldı.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -83,8 +83,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-slice"></i><span>İndirim Kodu Yönetimi</span></a>
                                 <ul class="collapse">
-                                    <li><a href="fontawesome.html">İndirim Kodları</a></li>
-                                    <li><a href="themify.html">Kod Üret</a></li>
+                                    <li><a href="@Url.Action("Index","DiscountKey")">İndirim Kodları</a></li>
+                                    <li><a href="@Url.Action("Insert","DiscountKey")">Kod Üret</a></li>
                                 </ul>
                             </li>
                             <li>
