--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Insert.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/Slider/Insert.cshtml
@@ -15,27 +15,27 @@
                         <div class="form-group">
 
                             @Html.LabelFor(s => s.Title, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.Title, new { @class = "form-control", required = "", placeholder = "İsim" })
+                            @Html.TextBoxFor(s => s.Title, new { @class = "form-control"})
                             @Html.ValidationMessageFor(s => s.Title)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.ImagePath, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control", placeholder = "Resim", type = "file" })
+                            @Html.TextBoxFor(s => s.ImagePath, new { @class = "form-control"})
                             @Html.ValidationMessageFor(s => s.ImagePath)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.ExpiredDate, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.ExpiredDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker", placeholder = "Bitiş Tarihi" })
+                            @Html.TextBoxFor(s => s.ExpiredDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker" })
                             @Html.ValidationMessageFor(s => s.ExpiredDate)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.CretaDate, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.CretaDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker", placeholder = "Başlangıç Tarihi" })
+                            @Html.TextBoxFor(s => s.CretaDate, "{0:dd.MM.yyyy}", new { @class = "form-control datepicker"})
                             @Html.ValidationMessageFor(s => s.CretaDate)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(s => s.RedirectUrl, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.RedirectUrl, new { @class = "form-control", placeholder = "Url" })
+                            @Html.TextBoxFor(s => s.RedirectUrl, new { @class = "form-control" })
                             @Html.ValidationMessageFor(s => s.RedirectUrl)
                         </div>
                         <div class="form-group">
