AdminUser ve AppUser şifremi unuttum yapıldı.

--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/Password.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/Password.cshtml
@@ -1,8 +1,10 @@
-﻿@using ECommerce.WEB.Areas.Admin.Model.AdminUserManagement
-@model AdminUserLoginCRUDModel
+﻿@model ECommerce.WEB.Areas.Admin.Model.AdminUserManagement.AdminUserCRUDModel
+
 @{
-    Layout = null;
+    ViewBag.Title = "Password";
+        Layout = null;
 }
+
 
 <!doctype html>
 <html class="no-js" lang="en">
@@ -46,36 +48,25 @@
     <div class="login-area login-bg">
         <div class="container">
             <div class="login-box ptb--100">
-                @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { id = "LoginForm" }))
+                @using (Html.BeginForm("Password", "AdminUser", FormMethod.Post, new { id = "PasswordAdminUser" }))
                 {
+                    @Html.HiddenFor(s=> s.AdminUserId)
                     <div class="login-form-head">
-                        <h4>Giriş Yap</h4>
+                        <h2>ŞİFREMİ UNUTTUM</h2>
+                        <h6>
+                            Yeni şifre belirlemek için kayıtlı e-posta  adresinizi yazınız.
+                        </h6>
+                        <h6> Şifre değiştirme linkini e-posta  adresinize göndereceğiz.</h6>
                     </div>
                     <div class="login-form-body">
                         <div class="form-gp">
-                            @Html.LabelFor(s=> s.Email, new { @class ="col-form-label"})
-                            @Html.TextBoxFor(s => s.Email, new { type = "email"})
-                            @Html.ValidationMessageFor(s=>s.Email)
+                            @Html.LabelFor(s => s.Email, new { @class = "col-form-label" })
+                            @Html.TextBoxFor(s => s.Email, new { type = "email" })
+                            @Html.ValidationMessageFor(s => s.Email)
                         </div>
-                        <div class="form-gp">
-                            @Html.LabelFor(s => s.Password, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.Password, new { @class = "form-control", type = "password" })
-                            @Html.ValidationMessageFor(s => s.Password)
-                        </div>
-                        <div class="row mb-4 rmber-area">
-                            <div class="col-6">
-                                <div class="custom-control custom-checkbox mr-sm-2">
-                                    @Html.CheckBoxFor(s => s.IsRemember, new { @class = "custom-control-input" })
-                                    @Html.LabelFor(s => s.IsRemember, new { @class = "custom-control-label" })
-                                    @Html.ValidationMessageFor(s => s.IsRemember)
-                                </div>
-                            </div>
-                            <div class="col-6 text-right">
-                                <a href="@Url.Action("Password","AdminUser", new {Area = "Admin"  })">Şifremi Unuttum</a>
-                            </div>
-                        </div>
+
                         <div class="submit-btn-area">
-                            <button id="form_submit" type="submit">Giriş Yap <i class="ti-arrow-right"></i></button>
+                            <input type="submit" value="ŞİFREMİ YENİLE" class="btn btn-solid" />
                         </div>
                     </div>
                 }
@@ -102,7 +93,7 @@
     <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
     <script>
-        Jform('#LoginForm');
+        Jform('#PasswordAdminUser');
     </script>
 </body>
 
