--- a/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/RePassword.cshtml
+++ b/ECommerce/ECommerce.WEB/Areas/Admin/Views/AdminUser/RePassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using ECommerce.WEB.Areas.Admin.Model.AdminUserManagement
-@model AdminUserLoginCRUDModel
+﻿@model ECommerce.WEB.Areas.Admin.Model.AdminUserManagement.AdminUserUpdatePasswordModel
 @{
     Layout = null;
 }
@@ -46,36 +45,29 @@
     <div class="login-area login-bg">
         <div class="container">
             <div class="login-box ptb--100">
-                @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { id = "LoginForm" }))
+                @using (Html.BeginForm("RePassword", "AdminUser", FormMethod.Post, new { id = "RePasswordForm" }))
                 {
+                    @Html.HiddenFor(s=> s.AdminUserId)
+                    @Html.HiddenFor(s=> s.ActivationCode)
                     <div class="login-form-head">
-                        <h4>Giriş Yap</h4>
+                        <h2>Şifre Değiştirme</h2>
+                        <h6>
+                            Lütfen yeni bir şifre oluşturunuz.
+                        </h6>
                     </div>
                     <div class="login-form-body">
                         <div class="form-gp">
-                            @Html.LabelFor(s=> s.Email, new { @class ="col-form-label"})
-                            @Html.TextBoxFor(s => s.Email, new { type = "email"})
-                            @Html.ValidationMessageFor(s=>s.Email)
-                        </div>
-                        <div class="form-gp">
                             @Html.LabelFor(s => s.Password, new { @class = "col-form-label" })
-                            @Html.TextBoxFor(s => s.Password, new { @class = "form-control", type = "password" })
+                            @Html.PasswordFor(s => s.Password, new { })
                             @Html.ValidationMessageFor(s => s.Password)
                         </div>
-                        <div class="row mb-4 rmber-area">
-                            <div class="col-6">
-                                <div class="custom-control custom-checkbox mr-sm-2">
-                                    @Html.CheckBoxFor(s => s.IsRemember, new { @class = "custom-control-input" })
-                                    @Html.LabelFor(s => s.IsRemember, new { @class = "custom-control-label" })
-                                    @Html.ValidationMessageFor(s => s.IsRemember)
-                                </div>
-                            </div>
-                            <div class="col-6 text-right">
-                                <a href="@Url.Action("Password","AdminUser", new {Area = "Admin"  })">Şifremi Unuttum</a>
-                            </div>
+                        <div class="form-gp">
+                            @Html.LabelFor(s => s.RePassword, new { @class = "col-form-label" })
+                            @Html.PasswordFor(s => s.RePassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(s => s.RePassword)
                         </div>
                         <div class="submit-btn-area">
-                            <button id="form_submit" type="submit">Giriş Yap <i class="ti-arrow-right"></i></button>
+                            <input type="submit" value="Şifreyi Kaydet" class="btn btn-solid" />
                         </div>
                     </div>
                 }
@@ -102,7 +94,7 @@
     <script src="~/Content/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
     <script>
-        Jform('#LoginForm');
+        Jform('#RePasswordForm');
     </script>
 </body>
 
