--- a/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/Login.cshtml
@@ -40,16 +40,22 @@
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(s => s.Password, new { @class = "col-form-label" })
-                                @Html.TextBoxFor(s => s.Password, new { @class = "form-control",type="password" })
+                                @Html.TextBoxFor(s => s.Password, new { @class = "form-control", type = "password" })
                                 @Html.ValidationMessageFor(c => c.Password)
                             </div>
-                            <div>
-
-                                @Html.CheckBoxFor(s => s.RememberMe ,new { @class = ""})
-                                @Html.LabelFor(s => s.RememberMe, new { @class = "col-check-label" })
-                                @Html.ValidationMessageFor(s => s.RememberMe)
+                            <div class="row mb-4 rmber-area">
+                                <div class="col-6">
+                                    <div class="custom-control custom-checkbox mr-sm-2">
+                                        @Html.CheckBoxFor(s => s.RememberMe, new { @class = "" })
+                                        @Html.LabelFor(s => s.RememberMe, new { @class = "" })
+                                        @Html.ValidationMessageFor(s => s.RememberMe)
+                                    </div>
+                                </div>
+                                <div class="col-6 text-right">
+                                    <a href="@Url.Action("Password","Home" )">Şifremi Unuttum</a>
+                                </div>
                             </div>
-                            <br />
+
                             <div>
                                 <input type="submit" class="btn btn-solid" value="Giriş Yap">
                             </div>
