UserCart Crud işemleri yapıldı

--- a/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
@@ -357,7 +357,8 @@
         </div>
         <div class="lower-section">
             @Html.Action("_UserInformation", "Home")
-
+            @Html.Action("_UserCart", "UserCart")
+            @Html.Action("_WishList", "Wishlist")
         </div>
     </div>
 </div>
