--- a/ECommerce/ECommerce.WEB/Views/Home/_UserInformation.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_UserInformation.cshtml
@@ -58,8 +58,8 @@
                 <img src="~/Themes/assets/images/icon/l-2/wishlist.png" alt="" class="wishlist-img">
                 <i class="ti-heart mobile-icon"></i>
                 <div class="wishlist icon-detail">
-                    <h6 class="up-cls"><span>3 item</span></h6>
-                    <h6><a href="#">wish list</a></h6>
+                   
+                    <h6><a href="@Url.Action("_WishList","Wishlist")">Favorilerim</a></h6>
                 </div>
             </li>
             <li class="onhover-div user-icon">
@@ -82,8 +82,8 @@
                 <img src="~/Themes/assets/images/icon/l-2/cart.png" alt="" class="cart-image">
                 <i class="ti-shopping-cart mobile-icon"></i>
                 <div class="cart  icon-detail">
-                    <h6 class="up-cls"><span>3 item</span></h6>
-                    <h6><a href="#">my cart</a></h6>
+                    <h6 class="up-cls"><span>@appUser.UserCart.Count</span></h6>
+                    <h6><a href="@Url.Action("_UserCart","UserCart")">Sepetim</a></h6>
                 </div>
             </li>
         </ul>
@@ -143,8 +143,8 @@ else
                 <img src="~/Themes/assets/images/icon/l-2/wishlist.png" alt="" class="wishlist-img">
                 <i class="ti-heart mobile-icon"></i>
                 <div class="wishlist icon-detail">
-                    <h6 class="up-cls"><span>3 item</span></h6>
-                    <h6><a href="#">wish list</a></h6>
+                    
+                    <h6><a href="@Url.Action("Login","Home")">Favorilerim</a></h6>
                 </div>
             </li>
             <li class="onhover-div user-icon">
@@ -161,8 +161,8 @@ else
                 <img src="~/Themes/assets/images/icon/l-2/cart.png" alt="" class="cart-image">
                 <i class="ti-shopping-cart mobile-icon"></i>
                 <div class="cart  icon-detail">
-                    <h6 class="up-cls"><span>3 item</span></h6>
-                    <h6><a href="#">my cart</a></h6>
+                    <h6><a href="@Url.Action("Login","Home")">Sepetim</a></h6>
+
                 </div>
             </li>
         </ul>
