Usercart index ve wishlist index düzenlendi

--- a/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/UserCart/Index.cshtml
@@ -32,7 +32,7 @@
 <section class="cart-section section-b-space">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-auto">
                 <table class="table cart-table table-responsive-xs striped-table">
                     <thead>
                         <tr class="table-head">
