--- a/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Wishlist/Index.cshtml
@@ -11,14 +11,14 @@
         <div class="row">
             <div class="col-12">
                 <div class="page-title">
-                    <h2>wishlist</h2>
+                    <h2>FAVORİLERİM</h2>
                 </div>
             </div>
             <div class="col-12">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">wishlist</li>
+                        <li class="breadcrumb-item"><a href="@Url.Action("IndexProductStoreWindow","Product")">Anasayfa</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">FAVORİLERİM</li>
                     </ol>
                 </nav>
             </div>
@@ -36,7 +36,7 @@
                         <tr class="table-head">
                             <th scope="col">Resim</th>
                             <th scope="col">Ürün adı</th>
-                            <th scope="col">Fiyatı</th>
+                            <th scope="col">FİYATI</th>
                             <th scope="col">Sil/ Sepete Ekle </th>
 
                         </tr>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="row cart-buttons">
-            <div class="col-6"><a href="#" class="btn btn-solid">continue shopping</a></div>
+            <div class="col-6"><a href="@Url.Action("IndexProductStoreWindow","Product")" class="btn btn-solid">ALIŞVERİŞE Devam Et</a></div>
             <div class="col-6"><a href="#" class="btn btn-solid">Sepete Git</a></div>
         </div>
     </div>
